clang/test/BSC/Negative/NullabilityCheck/owned_ptr_as_condition.cbs
// RUN: %clang_cc1 -verify %s

_Safe void consume(int *_Owned _Nullable);

_Safe void strict_consume(int *_Owned _Nonnull);

struct Foo {
    int *_Owned _Nullable p;
};

_Safe void reference(int *_Owned _Nullable p) {
    if (p == nullptr) {
        int x = *p; // expected-error {{nullable pointer cannot be dereferenced}}
        strict_consume(p); // expected-error {{cannot pass nullable pointer argument}}
    }
} // no memory leak error expected, because nullability goes before ownership

_Safe void reference_not(int *_Owned _Nullable p, int x) {
    if (p != nullptr) {
        ++x;
    } else {
        x = *p; // expected-error {{nullable pointer cannot be dereferenced}}
        strict_consume(p); // expected-error {{cannot pass nullable pointer argument}}
    }
}


_Safe void logical_not(int *_Owned _Nullable p) {
    if (!p) {
        int x = *p; // expected-error {{nullable pointer cannot be dereferenced}}
        strict_consume(p); // expected-error {{cannot pass nullable pointer argument}}
    }
}

_Safe void basic(int *_Owned _Nullable p, int x) {
    if (p) {
        ++x;
    } else {
        x = *p; // expected-error {{nullable pointer cannot be dereferenced}}
        strict_consume(p); // expected-error {{cannot pass nullable pointer argument}}
    }
}

_Safe void member_not(struct Foo foo) {
    if (!foo.p) {
        int x = *(foo.p); // expected-error {{nullable pointer cannot be dereferenced}}
        strict_consume(foo.p); // expected-error {{cannot pass nullable pointer argument}}
    }
}

_Safe void member(struct Foo foo, int x) {
    if (foo.p) {
        ++x;
    } else {
        x = *(foo.p);  // expected-error {{nullable pointer cannot be dereferenced}}
        strict_consume(foo.p); // expected-error {{cannot pass nullable pointer argument}}
    }
}

_Safe void ternary(int *_Owned _Nullable p, int x) {
    x = (nullptr == p) ? (*p = 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = (nullptr == p) ? (*p += 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = (p == nullptr) ? (*p = 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = (p == nullptr) ? (*p += 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = (nullptr != p) ? 0 : (*p = 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = (nullptr != p) ? 0 : (*p += 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = (p != nullptr) ? 0 : (*p = 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = (p != nullptr) ? 0 : (*p += 1); // expected-error {{nullable pointer cannot be dereferenced}}
    
    x = !p ? (*p = 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = !p ? (*p += 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = !p ? (*p = 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = !p ? (*p += 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = p ? 0 : (*p = 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = p ? 0 : (*p += 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = p ? 0 : (*p = 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = p ? 0 : (*p += 1); // expected-error {{nullable pointer cannot be dereferenced}}
    consume(p);
}

_Safe void ternary_borrow(int *_Borrow _Nullable p, int x) {
    x = (nullptr == p) ? (*p = 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = (nullptr == p) ? (*p += 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = (p == nullptr) ? (*p = 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = (p == nullptr) ? (*p += 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = (nullptr != p) ? 0 : (*p = 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = (nullptr != p) ? 0 : (*p += 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = (p != nullptr) ? 0 : (*p = 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = (p != nullptr) ? 0 : (*p += 1); // expected-error {{nullable pointer cannot be dereferenced}}
    
    x = !p ? (*p = 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = !p ? (*p += 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = !p ? (*p = 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = !p ? (*p += 1) : 0; // expected-error {{nullable pointer cannot be dereferenced}}
    x = p ? 0 : (*p = 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = p ? 0 : (*p += 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = p ? 0 : (*p = 1); // expected-error {{nullable pointer cannot be dereferenced}}
    x = p ? 0 : (*p += 1); // expected-error {{nullable pointer cannot be dereferenced}}
}
